--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -883,7 +883,7 @@
           </size>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <property name="movable">
           <bool>false</bool>
@@ -1090,9 +1090,16 @@
               </widget>
              </item>
              <item>
+              <widget class="QPushButton" name="preview">
+               <property name="text">
+                <string>Preview</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QLabel" name="labelZoomLimit">
                <property name="text">
-                <string>Max zoom:</string>
+                <string>Max preview zoom:</string>
                </property>
               </widget>
              </item>
@@ -1106,13 +1113,6 @@
                </property>
                <property name="value">
                 <number>12</number>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="preview">
-               <property name="text">
-                <string>Preview</string>
                </property>
               </widget>
              </item>
@@ -2524,7 +2524,7 @@
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>98</width>
+                  <width>177</width>
                   <height>220</height>
                  </rect>
                 </property>
