Search: translate and add ConfigSearchColumns class for proper translation

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -2318,7 +2318,7 @@
                 <property name="geometry">
                  <rect>
                   <x>0</x>
-                  <y>0</y>
+                  <y>-136</y>
                   <width>198</width>
                   <height>220</height>
                  </rect>
@@ -2345,7 +2345,7 @@
                   </rect>
                  </property>
                  <property name="text">
-                  <string>Id</string>
+                  <string>ID</string>
                  </property>
                 </widget>
                 <widget class="QCheckBox" name="showModelColumn">
@@ -2503,7 +2503,7 @@
                </property>
                <property name="minimumSize">
                 <size>
-                 <width>200</width>
+                 <width>230</width>
                  <height>0</height>
                 </size>
                </property>
@@ -2523,8 +2523,8 @@
                 <property name="geometry">
                  <rect>
                   <x>0</x>
-                  <y>0</y>
-                  <width>177</width>
+                  <y>-136</y>
+                  <width>207</width>
                   <height>220</height>
                  </rect>
                 </property>
@@ -2545,7 +2545,7 @@
                   <rect>
                    <x>10</x>
                    <y>2</y>
-                   <width>111</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2561,7 +2561,7 @@
                   <rect>
                    <x>10</x>
                    <y>23</y>
-                   <width>111</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2577,7 +2577,7 @@
                   <rect>
                    <x>10</x>
                    <y>44</y>
-                   <width>81</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2593,7 +2593,7 @@
                   <rect>
                    <x>10</x>
                    <y>65</y>
-                   <width>101</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2609,7 +2609,7 @@
                   <rect>
                    <x>10</x>
                    <y>86</y>
-                   <width>81</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2625,7 +2625,7 @@
                   <rect>
                    <x>10</x>
                    <y>107</y>
-                   <width>101</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2641,7 +2641,7 @@
                   <rect>
                    <x>10</x>
                    <y>128</y>
-                   <width>121</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2657,7 +2657,7 @@
                   <rect>
                    <x>10</x>
                    <y>149</y>
-                   <width>111</width>
+                   <width>220</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2670,7 +2670,7 @@
                   <rect>
                    <x>10</x>
                    <y>170</y>
-                   <width>171</width>
+                   <width>220</width>
                    <height>20</height>
                   </rect>
                  </property>
@@ -2683,7 +2683,7 @@
                   <rect>
                    <x>10</x>
                    <y>191</y>
-                   <width>81</width>
+                   <width>161</width>
                    <height>20</height>
                   </rect>
                  </property>
