--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -911,62 +911,11 @@
               <layout class="QGridLayout" name="gridLayout_7">
                <item row="0" column="0">
                 <layout class="QGridLayout" name="projectsPageLayout">
-                 <item row="3" column="0">
-                  <widget class="QScrollArea" name="projectsScrollArea">
-                   <property name="frameShape">
-                    <enum>QFrame::NoFrame</enum>
-                   </property>
-                   <property name="widgetResizable">
-                    <bool>true</bool>
-                   </property>
-                   <widget class="QWidget" name="projectsScrollAreaContents">
-                    <property name="geometry">
-                     <rect>
-                      <x>0</x>
-                      <y>0</y>
-                      <width>662</width>
-                      <height>350</height>
-                     </rect>
-                    </property>
-                    <property name="sizePolicy">
-                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                      <horstretch>0</horstretch>
-                      <verstretch>0</verstretch>
-                     </sizepolicy>
-                    </property>
-                    <property name="minimumSize">
-                     <size>
-                      <width>0</width>
-                      <height>0</height>
-                     </size>
-                    </property>
-                    <layout class="QGridLayout" name="gridLayout_12">
-                     <item row="0" column="0">
-                      <layout class="QGridLayout" name="projectsLayout">
-                       <property name="topMargin">
-                        <number>0</number>
-                       </property>
-                      </layout>
-                     </item>
-                    </layout>
-                   </widget>
-                  </widget>
+                 <item row="0" column="0">
+                  <widget class="QTableWidget" name="projectsTable"/>
                  </item>
-                 <item row="5" column="0">
+                 <item row="3" column="0">
                   <layout class="QHBoxLayout" name="horizontalLayout_19">
-                   <item>
-                    <spacer name="horizontalSpacer_15">
-                     <property name="orientation">
-                      <enum>Qt::Horizontal</enum>
-                     </property>
-                     <property name="sizeHint" stdset="0">
-                      <size>
-                       <width>40</width>
-                       <height>20</height>
-                      </size>
-                     </property>
-                    </spacer>
-                   </item>
                    <item>
                     <widget class="QPushButton" name="projectsPreviousPageButton">
                      <property name="minimumSize">
@@ -989,7 +938,7 @@
                       </font>
                      </property>
                      <property name="text">
-                      <string>1/1</string>
+                      <string/>
                      </property>
                     </widget>
                    </item>
@@ -1019,23 +968,10 @@
                      </property>
                     </spacer>
                    </item>
+                   <item>
+                    <widget class="QLineEdit" name="filterProjects"/>
+                   </item>
                   </layout>
-                 </item>
-                 <item row="4" column="0">
-                  <spacer name="verticalSpacer_6">
-                   <property name="orientation">
-                    <enum>Qt::Vertical</enum>
-                   </property>
-                   <property name="sizeType">
-                    <enum>QSizePolicy::Minimum</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>20</width>
-                     <height>10</height>
-                    </size>
-                   </property>
-                  </spacer>
                  </item>
                 </layout>
                </item>
@@ -1138,7 +1074,7 @@
                 </widget>
                </item>
                <item row="2" column="0">
-                <layout class="QHBoxLayout" name="processingFooter" stretch="0,0,0,0,0,0">
+                <layout class="QHBoxLayout" name="processingFooter" stretch="0,0,0,0,0">
                  <item>
                   <widget class="QPushButton" name="downloadResultsButton">
                    <property name="text">
@@ -1191,22 +1127,6 @@
                   </spacer>
                  </item>
                  <item>
-                  <widget class="QLineEdit" name="filterProcessings">
-                   <property name="minimumSize">
-                    <size>
-                     <width>300</width>
-                     <height>0</height>
-                    </size>
-                   </property>
-                   <property name="maxLength">
-                    <number>255</number>
-                   </property>
-                   <property name="placeholderText">
-                    <string>Filter processings by name</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <spacer name="horizontalSpacer_13">
                    <property name="orientation">
                     <enum>Qt::Horizontal</enum>
@@ -1239,19 +1159,6 @@
                  <property name="rightMargin">
                   <number>0</number>
                  </property>
-                 <item row="0" column="0">
-                  <widget class="QPushButton" name="switchProjectsButton">
-                   <property name="minimumSize">
-                    <size>
-                     <width>50</width>
-                     <height>0</height>
-                    </size>
-                   </property>
-                   <property name="text">
-                    <string/>
-                   </property>
-                  </widget>
-                 </item>
                  <item row="0" column="2">
                   <widget class="QLabel" name="currentProjectLabel">
                    <property name="font">
@@ -1262,6 +1169,32 @@
                    </property>
                    <property name="text">
                     <string>Project:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="3">
+                  <spacer name="horizontalSpacer_14">
+                   <property name="orientation">
+                    <enum>Qt::Horizontal</enum>
+                   </property>
+                   <property name="sizeHint" stdset="0">
+                    <size>
+                     <width>40</width>
+                     <height>20</height>
+                    </size>
+                   </property>
+                  </spacer>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QPushButton" name="switchProjectsButton">
+                   <property name="minimumSize">
+                    <size>
+                     <width>50</width>
+                     <height>0</height>
+                    </size>
+                   </property>
+                   <property name="text">
+                    <string/>
                    </property>
                   </widget>
                  </item>
@@ -1278,34 +1211,21 @@
                    </property>
                   </spacer>
                  </item>
-                 <item row="0" column="3">
-                  <spacer name="horizontalSpacer_14">
-                   <property name="orientation">
-                    <enum>Qt::Horizontal</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>40</width>
-                     <height>20</height>
-                    </size>
-                   </property>
-                  </spacer>
-                 </item>
                  <item row="0" column="4">
-                  <spacer name="verticalSpacer_7">
-                   <property name="orientation">
-                    <enum>Qt::Vertical</enum>
-                   </property>
-                   <property name="sizeType">
-                    <enum>QSizePolicy::Minimum</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
+                  <widget class="QLineEdit" name="filterProcessings">
+                   <property name="minimumSize">
                     <size>
-                     <width>50</width>
-                     <height>10</height>
+                     <width>300</width>
+                     <height>0</height>
                     </size>
                    </property>
-                  </spacer>
+                   <property name="maxLength">
+                    <number>255</number>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Filter processings by name</string>
+                   </property>
+                  </widget>
                  </item>
                 </layout>
                </item>
